--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
             <h1>YouTube</h1>
             <input type="text" placeholder="search" />
             <a href={{ url_for('signup') }}>acc.</a>
-            <h1>+</h1>
+            <a href={{ url_for('upload_video') }}>+</a>
         </div>
         {% block content %}{% endblock %}
     </body>
