video saving working

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,20 +2,7 @@
 <html>
     <head>
         <title>Login</title>
-<style>
-body {
-    background-color:black;
-}
-
-.container > form{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-}
-.container label{
-    color: white;
-}
-</style>
+        <link rel="stylesheet" href={{ url_for('static', filename='formstyles.css') }} >
     </head>
     <body>
         <div class="container">
