--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
         <title>
             {% block title%}{% endblock%}
         </title>
+        <link rel="stylesheet" href={{ url_for('static', filename='formstyles.css') }} >
         <link rel="stylesheet" href={{ url_for('static', filename='styles.css') }} >
     </head>
     <body>
