--- a/static/styles.css
+++ b/static/styles.css
@@ -134,3 +134,29 @@ body >h1 {
     display:flex;
     flex-direction:row;
 }
+.left-side{
+    display: flex;
+    flex-direction:column;
+}
+
+.left-side .comment{
+    width:100%;
+    display: flex;
+    margin-left:30px;
+}
+
+.left-side .comment-card{
+    display: flex;
+    flex-direction:column;
+    padding:0px;
+    border: 2px solid black;
+    width:100%;
+    margin: 20px;
+}
+.left-side input {
+    height:20px;
+    width:150px;
+  
+}
+
+
