--- a/templates/player.html
+++ b/templates/player.html
@@ -2,13 +2,31 @@
 {% block title %}Home{% endblock %}
 {% block content %}
     <div class="player">
-        <div class="player-card">
-          <video src=" {{ url_for('static', filename='videos/'+video.file_path) }}  " controls alt="{{video.caption}}" class="player-video"> </video>
-          <div class="player-card-container">
-            <h2>{{ video.caption }}
-            <h4><b>{{ video.user.username }}</b></h4>
-            <p>{{ video.views }}</p>
-          </div>
+        <div class='left-side'>
+            <div class="player-card">
+              <video src=" {{ url_for('static', filename='videos/'+video.file_path) }}  " controls alt="{{video.caption}}" class="player-video"> </video>
+              <div class="player-card-container">
+                <h2>{{ video.caption }}</h2>
+                <h4><b>{{ video.user.username }}</b></h4>
+                <p>{{ video.views }}</p>
+              </div>
+            </div>
+            <div class="comment">
+                <form method="POST" action="">
+                    {{ form.hidden_tag() }}
+                    {{ form.content() }}
+                    {{ form.submit() }}
+                </form>
+            </div>
+            <div class="comment-list">
+                {% for comment in comments %}
+                    <div class="comment-card">
+                        <h3>{{ comment.content }}</h3>
+                        <h4><b>{{ comment.user.username }}</b></h4>
+                        <p>{{ video.likes }}</p>
+                   </div>
+                 {% endfor %} 
+            </div>
         </div>
         <div class="side-list">
             {% for video in videos %}
