--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}sign up{% endblock %}
 {% block content %}
     <div class="container">
         <form method="POST" action="">
