--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Login</title>
-        <link rel="stylesheet" href={{ url_for('static', filename='formstyles.css') }} >
-    </head>
-    <body>
-        <div class="container">
-            <form method="POST" action="">
-                {{ form.hidden_tag() }}
-                <label>{{ form.username.label() }}</label>
-                {{ form.username() }}
-                <label>{{ form.password.label() }}</label>
-                {{ form.password() }}
+{% extends "layout.html" %}
+{% block title %}Log in{% endblock %}
+{% block content %}
+    <div class="container">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <label>{{ form.username.label() }}</label>
+            {{ form.username() }}
+            <label>{{ form.password.label() }}</label>
+            {{ form.password() }}
 
-                {{ form.submit() }}
-            </form>
-            <h3>don't have an acc?<a href = {{ url_for('signup') }} >sign up<a/>
+            {{ form.submit() }}
+        </form>
+        <h3>don't have an acc?<a href = {{ url_for('signup') }} >sign up<a/>
 
-        </div>
-    </body>
-</html>
+    </div>
+{% endblock %}
